src/Etapas/y.output
   0  $accept : programa $end

   1  programa : '{' cuerpoPrograma '}'
   2           | '{' '}'
   3           | cuerpoPrograma '}'
   4           | '{' cuerpoPrograma

   5  cuerpoPrograma : cuerpoPrograma declaracionClase
   6                 | cuerpoPrograma listaSentencias
   7                 | declaracionClase
   8                 | listaSentencias

   9  declaracionClase : CLASS ID '{' cuerpoClase '}' ','
  10                   | CLASS ID '{' cuerpoClase '}'
  11                   | CLASS ID ','
  12                   | CLASS ID

  13  cuerpoClase : cuerpoClase seccionClase
  14              | seccionClase

  15  seccionClase : seccionAtributos
  16               | seccionMetodos

  17  seccionAtributos : tipo ID ';' listaAtributos
  18                   | tipo ID ','
  19                   | tipo ID

  20  listaAtributos : ID ';' listaAtributos
  21                 | ID ','
  22                 | ID

  23  seccionMetodos : seccionMetodos ',' declaracionMetodo
  24                 | declaracionMetodo ','

  25  listaEjecutables : listaEjecutables ',' sentenciaEjecutable
  26                   | sentenciaEjecutable ','
  27                   | sentenciaEjecutable '$'

  28  sentenciaEjecutable : asignacion
  29                      | sentenciaIf
  30                      | sentenciaWhile
  31                      | print
  32                      | return
  33                      | invocacionMetodo

  34  listaDeclarativa : listaDeclarativa ',' sentenciaDeclarativa
  35                   | sentenciaDeclarativa ','
  36                   | sentenciaDeclarativa '$'

  37  sentenciaDeclarativa : declaracionMetodo
  38                       | declaracion

  39  listaSentencias : listaDeclarativa ',' listaEjecutables
  40                  | listaDeclarativa
  41                  | listaEjecutables

  42  asignacion : ID '=' expresion

  43  sentenciaIf : IF '(' expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF
  44              | IF '(' expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'
  45              | IF '(' expresion comparador expresion ')' '{' listaEjecutables '}' END_IF
  46              | IF '(' expresion comparador expresion ')' '{' listaEjecutables '}'

  47  sentenciaWhile : WHILE '(' expresion comparador expresion ')' '{' listaEjecutables '}'
  48                 | WHILE '(' expresion comparador ')' '{' listaEjecutables '}'

  49  print : PRINT '%' CADENA '%'

  50  return : RETURN ';'
  51         | RETURN expresion ';'

  52  declaracionMetodo : VOID ID '(' tipo ID ')' '{' cuerpoMetodo '}'
  53                    | VOID ID '(' ')' '{' cuerpoMetodo '}'

  54  cuerpoMetodo : listaSentencias

  55  invocacionMetodo : ID '(' tipo ID ')'
  56                   | ID '(' ')'

  57  declaracion : tipo listaDeclaracion

  58  listaDeclaracion : ID ';' listaDeclaracion
  59                   | ID

  60  tipo : SHORT
  61       | ULONG
  62       | FLOAT
  63       | ID

  64  expresion : termino
  65            | expresion '+' termino
  66            | expresion '-' termino

  67  termino : factor
  68          | termino '*' factor
  69          | termino '/' factor

  70  factor : ID
  71         | ID MENOSMENOS
  72         | CTE
  73         | '-' CTE
  74         | '(' expresion ')'

  75  comparador : MAYORIGUAL
  76             | MENORIGUAL
  77             | IGUAL
  78             | DISTINTO
  79             | '<'
  80             | '>'

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	CLASS  shift 2
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	WHILE  shift 9
	RETURN  shift 10
	'{'  shift 11
	.  error

	programa  goto 12
	cuerpoPrograma  goto 13
	declaracionClase  goto 14
	listaSentencias  goto 15
	tipo  goto 16
	declaracionMetodo  goto 17
	listaEjecutables  goto 18
	sentenciaEjecutable  goto 19
	asignacion  goto 20
	sentenciaIf  goto 21
	sentenciaWhile  goto 22
	print  goto 23
	return  goto 24
	invocacionMetodo  goto 25
	listaDeclarativa  goto 26
	sentenciaDeclarativa  goto 27
	declaracion  goto 28


state 1
	asignacion : ID . '=' expresion  (42)
	invocacionMetodo : ID . '(' tipo ID ')'  (55)
	invocacionMetodo : ID . '(' ')'  (56)
	tipo : ID .  (63)

	'='  shift 29
	'('  shift 30
	ID  reduce 63


state 2
	declaracionClase : CLASS . ID '{' cuerpoClase '}' ','  (9)
	declaracionClase : CLASS . ID '{' cuerpoClase '}'  (10)
	declaracionClase : CLASS . ID ','  (11)
	declaracionClase : CLASS . ID  (12)

	ID  shift 31
	.  error


state 3
	sentenciaIf : IF . '(' expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF . '(' expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF . '(' expresion comparador expresion ')' '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF . '(' expresion comparador expresion ')' '{' listaEjecutables '}'  (46)

	'('  shift 32
	.  error


state 4
	print : PRINT . '%' CADENA '%'  (49)

	'%'  shift 33
	.  error


state 5
	declaracionMetodo : VOID . ID '(' tipo ID ')' '{' cuerpoMetodo '}'  (52)
	declaracionMetodo : VOID . ID '(' ')' '{' cuerpoMetodo '}'  (53)

	ID  shift 34
	.  error


state 6
	tipo : SHORT .  (60)

	.  reduce 60


state 7
	tipo : ULONG .  (61)

	.  reduce 61


state 8
	tipo : FLOAT .  (62)

	.  reduce 62


state 9
	sentenciaWhile : WHILE . '(' expresion comparador expresion ')' '{' listaEjecutables '}'  (47)
	sentenciaWhile : WHILE . '(' expresion comparador ')' '{' listaEjecutables '}'  (48)

	'('  shift 35
	.  error


state 10
	return : RETURN . ';'  (50)
	return : RETURN . expresion ';'  (51)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	';'  shift 39
	'('  shift 40
	.  error

	expresion  goto 41
	termino  goto 42
	factor  goto 43


state 11
	programa : '{' . cuerpoPrograma '}'  (1)
	programa : '{' . '}'  (2)
	programa : '{' . cuerpoPrograma  (4)

	ID  shift 1
	CLASS  shift 2
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	WHILE  shift 9
	RETURN  shift 10
	'}'  shift 44
	.  error

	cuerpoPrograma  goto 45
	declaracionClase  goto 14
	listaSentencias  goto 15
	tipo  goto 16
	declaracionMetodo  goto 17
	listaEjecutables  goto 18
	sentenciaEjecutable  goto 19
	asignacion  goto 20
	sentenciaIf  goto 21
	sentenciaWhile  goto 22
	print  goto 23
	return  goto 24
	invocacionMetodo  goto 25
	listaDeclarativa  goto 26
	sentenciaDeclarativa  goto 27
	declaracion  goto 28


state 12
	$accept : programa . $end  (0)

	$end  accept


state 13
	programa : cuerpoPrograma . '}'  (3)
	cuerpoPrograma : cuerpoPrograma . declaracionClase  (5)
	cuerpoPrograma : cuerpoPrograma . listaSentencias  (6)

	ID  shift 1
	CLASS  shift 2
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	WHILE  shift 9
	RETURN  shift 10
	'}'  shift 46
	.  error

	declaracionClase  goto 47
	listaSentencias  goto 48
	tipo  goto 16
	declaracionMetodo  goto 17
	listaEjecutables  goto 18
	sentenciaEjecutable  goto 19
	asignacion  goto 20
	sentenciaIf  goto 21
	sentenciaWhile  goto 22
	print  goto 23
	return  goto 24
	invocacionMetodo  goto 25
	listaDeclarativa  goto 26
	sentenciaDeclarativa  goto 27
	declaracion  goto 28


state 14
	cuerpoPrograma : declaracionClase .  (7)

	.  reduce 7


state 15
	cuerpoPrograma : listaSentencias .  (8)

	.  reduce 8


state 16
	declaracion : tipo . listaDeclaracion  (57)

	ID  shift 49
	.  error

	listaDeclaracion  goto 50


state 17
	sentenciaDeclarativa : declaracionMetodo .  (37)

	.  reduce 37


state 18
	listaEjecutables : listaEjecutables . ',' sentenciaEjecutable  (25)
	listaSentencias : listaEjecutables .  (41)

	','  shift 51
	$end  reduce 41
	ID  reduce 41
	CLASS  reduce 41
	IF  reduce 41
	PRINT  reduce 41
	VOID  reduce 41
	SHORT  reduce 41
	ULONG  reduce 41
	FLOAT  reduce 41
	WHILE  reduce 41
	RETURN  reduce 41
	'}'  reduce 41


state 19
	listaEjecutables : sentenciaEjecutable . ','  (26)
	listaEjecutables : sentenciaEjecutable . '$'  (27)

	','  shift 52
	'$'  shift 53
	.  error


state 20
	sentenciaEjecutable : asignacion .  (28)

	.  reduce 28


state 21
	sentenciaEjecutable : sentenciaIf .  (29)

	.  reduce 29


state 22
	sentenciaEjecutable : sentenciaWhile .  (30)

	.  reduce 30


state 23
	sentenciaEjecutable : print .  (31)

	.  reduce 31


state 24
	sentenciaEjecutable : return .  (32)

	.  reduce 32


state 25
	sentenciaEjecutable : invocacionMetodo .  (33)

	.  reduce 33


state 26
	listaDeclarativa : listaDeclarativa . ',' sentenciaDeclarativa  (34)
	listaSentencias : listaDeclarativa . ',' listaEjecutables  (39)
	listaSentencias : listaDeclarativa .  (40)

	','  shift 54
	$end  reduce 40
	ID  reduce 40
	CLASS  reduce 40
	IF  reduce 40
	PRINT  reduce 40
	VOID  reduce 40
	SHORT  reduce 40
	ULONG  reduce 40
	FLOAT  reduce 40
	WHILE  reduce 40
	RETURN  reduce 40
	'}'  reduce 40


state 27
	listaDeclarativa : sentenciaDeclarativa . ','  (35)
	listaDeclarativa : sentenciaDeclarativa . '$'  (36)

	','  shift 55
	'$'  shift 56
	.  error


state 28
	sentenciaDeclarativa : declaracion .  (38)

	.  reduce 38


state 29
	asignacion : ID '=' . expresion  (42)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	'('  shift 40
	.  error

	expresion  goto 57
	termino  goto 42
	factor  goto 43


state 30
	invocacionMetodo : ID '(' . tipo ID ')'  (55)
	invocacionMetodo : ID '(' . ')'  (56)

	ID  shift 58
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	')'  shift 59
	.  error

	tipo  goto 60


state 31
	declaracionClase : CLASS ID . '{' cuerpoClase '}' ','  (9)
	declaracionClase : CLASS ID . '{' cuerpoClase '}'  (10)
	declaracionClase : CLASS ID . ','  (11)
	declaracionClase : CLASS ID .  (12)

	'{'  shift 61
	','  shift 62
	$end  reduce 12
	ID  reduce 12
	CLASS  reduce 12
	IF  reduce 12
	PRINT  reduce 12
	VOID  reduce 12
	SHORT  reduce 12
	ULONG  reduce 12
	FLOAT  reduce 12
	WHILE  reduce 12
	RETURN  reduce 12
	'}'  reduce 12


state 32
	sentenciaIf : IF '(' . expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF '(' . expresion comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF '(' . expresion comparador expresion ')' '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF '(' . expresion comparador expresion ')' '{' listaEjecutables '}'  (46)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	'('  shift 40
	.  error

	expresion  goto 63
	termino  goto 42
	factor  goto 43


state 33
	print : PRINT '%' . CADENA '%'  (49)

	CADENA  shift 64
	.  error


state 34
	declaracionMetodo : VOID ID . '(' tipo ID ')' '{' cuerpoMetodo '}'  (52)
	declaracionMetodo : VOID ID . '(' ')' '{' cuerpoMetodo '}'  (53)

	'('  shift 65
	.  error


state 35
	sentenciaWhile : WHILE '(' . expresion comparador expresion ')' '{' listaEjecutables '}'  (47)
	sentenciaWhile : WHILE '(' . expresion comparador ')' '{' listaEjecutables '}'  (48)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	'('  shift 40
	.  error

	expresion  goto 66
	termino  goto 42
	factor  goto 43


state 36
	factor : ID .  (70)
	factor : ID . MENOSMENOS  (71)

	MENOSMENOS  shift 67
	$end  reduce 70
	ID  reduce 70
	CLASS  reduce 70
	IF  reduce 70
	PRINT  reduce 70
	VOID  reduce 70
	SHORT  reduce 70
	ULONG  reduce 70
	FLOAT  reduce 70
	WHILE  reduce 70
	RETURN  reduce 70
	MAYORIGUAL  reduce 70
	MENORIGUAL  reduce 70
	IGUAL  reduce 70
	DISTINTO  reduce 70
	'+'  reduce 70
	'-'  reduce 70
	'*'  reduce 70
	'/'  reduce 70
	'}'  reduce 70
	','  reduce 70
	';'  reduce 70
	'$'  reduce 70
	')'  reduce 70
	'<'  reduce 70
	'>'  reduce 70


state 37
	factor : CTE .  (72)

	.  reduce 72


state 38
	factor : '-' . CTE  (73)

	CTE  shift 68
	.  error


state 39
	return : RETURN ';' .  (50)

	.  reduce 50


state 40
	factor : '(' . expresion ')'  (74)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	'('  shift 40
	.  error

	expresion  goto 69
	termino  goto 42
	factor  goto 43


state 41
	return : RETURN expresion . ';'  (51)
	expresion : expresion . '+' termino  (65)
	expresion : expresion . '-' termino  (66)

	'+'  shift 70
	'-'  shift 71
	';'  shift 72
	.  error


state 42
	expresion : termino .  (64)
	termino : termino . '*' factor  (68)
	termino : termino . '/' factor  (69)

	'*'  shift 73
	'/'  shift 74
	$end  reduce 64
	ID  reduce 64
	CLASS  reduce 64
	IF  reduce 64
	PRINT  reduce 64
	VOID  reduce 64
	SHORT  reduce 64
	ULONG  reduce 64
	FLOAT  reduce 64
	WHILE  reduce 64
	RETURN  reduce 64
	MAYORIGUAL  reduce 64
	MENORIGUAL  reduce 64
	IGUAL  reduce 64
	DISTINTO  reduce 64
	'+'  reduce 64
	'-'  reduce 64
	'}'  reduce 64
	','  reduce 64
	';'  reduce 64
	'$'  reduce 64
	')'  reduce 64
	'<'  reduce 64
	'>'  reduce 64


state 43
	termino : factor .  (67)

	.  reduce 67


state 44
	programa : '{' '}' .  (2)

	.  reduce 2


state 45
	programa : '{' cuerpoPrograma . '}'  (1)
	programa : '{' cuerpoPrograma .  (4)
	cuerpoPrograma : cuerpoPrograma . declaracionClase  (5)
	cuerpoPrograma : cuerpoPrograma . listaSentencias  (6)

	ID  shift 1
	CLASS  shift 2
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	WHILE  shift 9
	RETURN  shift 10
	'}'  shift 75
	$end  reduce 4

	declaracionClase  goto 47
	listaSentencias  goto 48
	tipo  goto 16
	declaracionMetodo  goto 17
	listaEjecutables  goto 18
	sentenciaEjecutable  goto 19
	asignacion  goto 20
	sentenciaIf  goto 21
	sentenciaWhile  goto 22
	print  goto 23
	return  goto 24
	invocacionMetodo  goto 25
	listaDeclarativa  goto 26
	sentenciaDeclarativa  goto 27
	declaracion  goto 28


state 46
	programa : cuerpoPrograma '}' .  (3)

	.  reduce 3


state 47
	cuerpoPrograma : cuerpoPrograma declaracionClase .  (5)

	.  reduce 5


state 48
	cuerpoPrograma : cuerpoPrograma listaSentencias .  (6)

	.  reduce 6


state 49
	listaDeclaracion : ID . ';' listaDeclaracion  (58)
	listaDeclaracion : ID .  (59)

	';'  shift 76
	$end  reduce 59
	ID  reduce 59
	CLASS  reduce 59
	IF  reduce 59
	PRINT  reduce 59
	VOID  reduce 59
	SHORT  reduce 59
	ULONG  reduce 59
	FLOAT  reduce 59
	WHILE  reduce 59
	RETURN  reduce 59
	'}'  reduce 59
	','  reduce 59
	'$'  reduce 59


state 50
	declaracion : tipo listaDeclaracion .  (57)

	.  reduce 57


state 51
	listaEjecutables : listaEjecutables ',' . sentenciaEjecutable  (25)

	ID  shift 77
	IF  shift 3
	PRINT  shift 4
	WHILE  shift 9
	RETURN  shift 10
	.  error

	sentenciaEjecutable  goto 78
	asignacion  goto 20
	sentenciaIf  goto 21
	sentenciaWhile  goto 22
	print  goto 23
	return  goto 24
	invocacionMetodo  goto 25


state 52
	listaEjecutables : sentenciaEjecutable ',' .  (26)

	.  reduce 26


state 53
	listaEjecutables : sentenciaEjecutable '$' .  (27)

	.  reduce 27


state 54
	listaDeclarativa : listaDeclarativa ',' . sentenciaDeclarativa  (34)
	listaSentencias : listaDeclarativa ',' . listaEjecutables  (39)

	ID  shift 1
	IF  shift 3
	PRINT  shift 4
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	WHILE  shift 9
	RETURN  shift 10
	.  error

	tipo  goto 16
	declaracionMetodo  goto 17
	listaEjecutables  goto 79
	sentenciaEjecutable  goto 19
	asignacion  goto 20
	sentenciaIf  goto 21
	sentenciaWhile  goto 22
	print  goto 23
	return  goto 24
	invocacionMetodo  goto 25
	sentenciaDeclarativa  goto 80
	declaracion  goto 28


state 55
	listaDeclarativa : sentenciaDeclarativa ',' .  (35)

	.  reduce 35


state 56
	listaDeclarativa : sentenciaDeclarativa '$' .  (36)

	.  reduce 36


state 57
	asignacion : ID '=' expresion .  (42)
	expresion : expresion . '+' termino  (65)
	expresion : expresion . '-' termino  (66)

	'+'  shift 70
	'-'  shift 71
	$end  reduce 42
	ID  reduce 42
	CLASS  reduce 42
	IF  reduce 42
	PRINT  reduce 42
	VOID  reduce 42
	SHORT  reduce 42
	ULONG  reduce 42
	FLOAT  reduce 42
	WHILE  reduce 42
	RETURN  reduce 42
	'}'  reduce 42
	','  reduce 42
	'$'  reduce 42


state 58
	tipo : ID .  (63)

	.  reduce 63


state 59
	invocacionMetodo : ID '(' ')' .  (56)

	.  reduce 56


state 60
	invocacionMetodo : ID '(' tipo . ID ')'  (55)

	ID  shift 81
	.  error


state 61
	declaracionClase : CLASS ID '{' . cuerpoClase '}' ','  (9)
	declaracionClase : CLASS ID '{' . cuerpoClase '}'  (10)

	ID  shift 58
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	.  error

	cuerpoClase  goto 82
	seccionClase  goto 83
	seccionAtributos  goto 84
	seccionMetodos  goto 85
	tipo  goto 86
	declaracionMetodo  goto 87


state 62
	declaracionClase : CLASS ID ',' .  (11)

	.  reduce 11


state 63
	sentenciaIf : IF '(' expresion . comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}' END_IF  (43)
	sentenciaIf : IF '(' expresion . comparador expresion ')' '{' listaEjecutables '}' ELSE '{' listaEjecutables '}'  (44)
	sentenciaIf : IF '(' expresion . comparador expresion ')' '{' listaEjecutables '}' END_IF  (45)
	sentenciaIf : IF '(' expresion . comparador expresion ')' '{' listaEjecutables '}'  (46)
	expresion : expresion . '+' termino  (65)
	expresion : expresion . '-' termino  (66)

	MAYORIGUAL  shift 88
	MENORIGUAL  shift 89
	IGUAL  shift 90
	DISTINTO  shift 91
	'+'  shift 70
	'-'  shift 71
	'<'  shift 92
	'>'  shift 93
	.  error

	comparador  goto 94


state 64
	print : PRINT '%' CADENA . '%'  (49)

	'%'  shift 95
	.  error


state 65
	declaracionMetodo : VOID ID '(' . tipo ID ')' '{' cuerpoMetodo '}'  (52)
	declaracionMetodo : VOID ID '(' . ')' '{' cuerpoMetodo '}'  (53)

	ID  shift 58
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	')'  shift 96
	.  error

	tipo  goto 97


state 66
	sentenciaWhile : WHILE '(' expresion . comparador expresion ')' '{' listaEjecutables '}'  (47)
	sentenciaWhile : WHILE '(' expresion . comparador ')' '{' listaEjecutables '}'  (48)
	expresion : expresion . '+' termino  (65)
	expresion : expresion . '-' termino  (66)

	MAYORIGUAL  shift 88
	MENORIGUAL  shift 89
	IGUAL  shift 90
	DISTINTO  shift 91
	'+'  shift 70
	'-'  shift 71
	'<'  shift 92
	'>'  shift 93
	.  error

	comparador  goto 98


state 67
	factor : ID MENOSMENOS .  (71)

	.  reduce 71


state 68
	factor : '-' CTE .  (73)

	.  reduce 73


state 69
	expresion : expresion . '+' termino  (65)
	expresion : expresion . '-' termino  (66)
	factor : '(' expresion . ')'  (74)

	'+'  shift 70
	'-'  shift 71
	')'  shift 99
	.  error


state 70
	expresion : expresion '+' . termino  (65)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	'('  shift 40
	.  error

	termino  goto 100
	factor  goto 43


state 71
	expresion : expresion '-' . termino  (66)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	'('  shift 40
	.  error

	termino  goto 101
	factor  goto 43


state 72
	return : RETURN expresion ';' .  (51)

	.  reduce 51


state 73
	termino : termino '*' . factor  (68)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	'('  shift 40
	.  error

	factor  goto 102


state 74
	termino : termino '/' . factor  (69)

	ID  shift 36
	CTE  shift 37
	'-'  shift 38
	'('  shift 40
	.  error

	factor  goto 103


state 75
	programa : '{' cuerpoPrograma '}' .  (1)

	.  reduce 1


state 76
	listaDeclaracion : ID ';' . listaDeclaracion  (58)

	ID  shift 49
	.  error

	listaDeclaracion  goto 104


state 77
	asignacion : ID . '=' expresion  (42)
	invocacionMetodo : ID . '(' tipo ID ')'  (55)
	invocacionMetodo : ID . '(' ')'  (56)

	'='  shift 29
	'('  shift 30
	.  error


state 78
	listaEjecutables : listaEjecutables ',' sentenciaEjecutable .  (25)

	.  reduce 25


state 79
	listaEjecutables : listaEjecutables . ',' sentenciaEjecutable  (25)
	listaSentencias : listaDeclarativa ',' listaEjecutables .  (39)

	','  shift 51
	$end  reduce 39
	ID  reduce 39
	CLASS  reduce 39
	IF  reduce 39
	PRINT  reduce 39
	VOID  reduce 39
	SHORT  reduce 39
	ULONG  reduce 39
	FLOAT  reduce 39
	WHILE  reduce 39
	RETURN  reduce 39
	'}'  reduce 39


state 80
	listaDeclarativa : listaDeclarativa ',' sentenciaDeclarativa .  (34)

	.  reduce 34


state 81
	invocacionMetodo : ID '(' tipo ID . ')'  (55)

	')'  shift 105
	.  error


state 82
	declaracionClase : CLASS ID '{' cuerpoClase . '}' ','  (9)
	declaracionClase : CLASS ID '{' cuerpoClase . '}'  (10)
	cuerpoClase : cuerpoClase . seccionClase  (13)

	ID  shift 58
	VOID  shift 5
	SHORT  shift 6
	ULONG  shift 7
	FLOAT  shift 8
	'}'  shift 106
	.  error

	seccionClase  goto 107
	seccionAtributos  goto 84
	seccionMetodos  goto 85
	tipo  goto 86
	declaracionMetodo  goto 87


state 83
	cuerpoClase : seccionClase .  (14)

	.  reduce 14


state 84
	seccionClase : seccionAtributos .  (15)
